migrator-tests/tests/snapshots/generate__twoway_migrations.snap
---
source: migrator-tests/tests/generate.rs
expression: "files.join(\"\\n\\n\")"
---
test_migration.down.surql

test_migration.up.surql
